single point force config